force-app/main/default/objects/bpats__Interview_Topic__c/bpats__Interview_Topic__c.object-meta.xml
<CustomObject>
    <label>Interview Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>