force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__External_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>bpats__External_Interviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Interviewer</label>
    <type>Checkbox</type>
</CustomField>