force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input Box</fullName>
            </value>
            <value>
                <fullName>Rating Slider</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>