force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__Interview_Template_Detail__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Template_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Template Detail</label>
    <referenceTo>bpats__Interview_Template_Detail__c</referenceTo>
    <relationshipLabel>Interview Topics</relationshipLabel>
    <relationshipName>Interview_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>