force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>bpats__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>