force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__Topic_Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic_Description__c</fullName>
    <label>Topic Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>