force-app/main/default/objects/bpats__Interview_Topic__c/fields/bpats__Topic_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic_Feedbacks__c</fullName>
    <label>Topic Feedbacks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>